Added the get positions and add position endpoints
